force-app/main/default/objects/Payment_Status__c/Payment_Status__c.object-meta.xml
<CustomObject>
    <label>Payment Status</label>
    <nameField>
        <displayFormat>PSN-{0000}</displayFormat>
        <label>Payment Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>