force-app/main/default/objects/Payment_Status__c/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <label>Balance Amount</label>
    <length>80</length>
    <type>Text</type>
</CustomField>