force-app/main/default/objects/Payment_Status__c/fields/Base_Fees__c.field-meta.xml
<CustomField>
    <fullName>Base_Fees__c</fullName>
    <label>Base Fees</label>
    <length>80</length>
    <type>Text</type>
</CustomField>