force-app/main/default/objects/Payment_Status__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>