force-app/main/default/objects/Payment_Status__c/fields/Discount_Name__c.field-meta.xml
<CustomField>
    <fullName>Discount_Name__c</fullName>
    <label>Discount Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>