force-app/main/default/objects/Payment_Status__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>