force-app/main/default/objects/Payment_Status__c/fields/Net_Payable__c.field-meta.xml
<CustomField>
    <fullName>Net_Payable__c</fullName>
    <label>Net Payable</label>
    <length>80</length>
    <type>Text</type>
</CustomField>