force-app/main/default/objects/Payment_Status__c/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Status</relationshipLabel>
    <relationshipName>Payment_Status</relationshipName>
    <type>Lookup</type>
</CustomField>