force-app/main/default/objects/Payment_Status__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <label>Variant</label>
    <length>80</length>
    <type>Text</type>
</CustomField>